packages/design-system/src/components/ds-drawer/ds-drawer.module.scss
@use '../../styles/grid-variables' as grid-vars;

.backdrop {
	position: absolute;
	inset: 0;
	background: var(--Background-background-overlay, rgba(0, 26, 71, 0.2));
	z-index: 1000;

	&[data-state='open'] {
		animation: 0.3s fade-in-backdrop ease-in-out both;
	}

	&[data-state='closed'] {
		animation: 0.2s fade-out-backdrop ease-in-out both;
	}
}

@keyframes fade-in-backdrop {
	0% {
		opacity: 0;
	}

	100% {
		opacity: 1;
	}
}

@keyframes fade-out-backdrop {
	0% {
		opacity: 1;
	}

	100% {
		opacity: 0;
	}
}

.positioner {
	position: absolute;
	inset: 0;
	overflow: hidden;
	pointer-events: none;
}

.drawer {
	position: absolute;
	display: block;
	top: 0;
	bottom: 0;
	background: var(--background);
	box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.22);
	z-index: 1200;
	pointer-events: auto;
	overflow: hidden;
	transition:
		transform 0.2s ease,
		width 0.2s ease;

	&.position-end {
		right: 0;
		transform-origin: 100% 50%;
		transform: translateX(100%);

		&[data-state='open'] {
			animation: 0.5s slide-in-drawer-end ease-out both;
		}

		&[data-state='closed'] {
			animation: 0.25s slide-out-drawer-end both;
		}
	}

	&.position-start {
		left: 0;
		transform: translateX(-100%);
		transform-origin: 0 50%;

		&[data-state='open'] {
			animation: 0.5s slide-in-drawer-start ease-out both;
		}

		&[data-state='closed'] {
			animation: 0.25s slide-out-drawer-start both;
		}
	}

	@for $i from 1 through grid-vars.$columns {
		&.cols-#{$i} {
			width: var(--col-span-#{$i});
		}
	}
}

@keyframes slide-in-drawer-end {
	0% {
		opacity: 0;
		transform: translateX(100%);
	}

	50% {
		opacity: 1;
		transform: translateX(0);
	}

	100% {
		transform: translateX(0);
	}
}

@keyframes slide-out-drawer-end {
	0% {
		opacity: 1;
		transform: translateX(0);
	}

	40% {
		transform: translateX(0);
	}

	100% {
		opacity: 0;
		transform: translateX(100%);
	}
}

@keyframes slide-in-drawer-start {
	0% {
		opacity: 0;
		transform: translateX(-100%);
	}

	50% {
		opacity: 1;
		transform: translateX(0);
	}

	100% {
		transform: translateX(0);
	}
}

@keyframes slide-out-drawer-start {
	0% {
		opacity: 1;
		transform: translateX(0);
	}

	40% {
		transform: translateX(0);
	}

	100% {
		opacity: 0;
		transform: translateX(-100%);
	}
}

.content {
	display: flex;
	flex-direction: column;
	height: 100%;
	overflow: hidden;
}

.header {
	display: flex;
	align-items: center;
	justify-content: space-between;
	flex-wrap: wrap;
	border-bottom: 1px solid var(--border);
	padding: var(--sm) var(--standard);
	gap: var(--3xs);
}

.title {
	margin: 0;
	color: var(--font-main);
}

.closeTrigger {
	display: flex;
	align-items: center;
	justify-content: center;
	color: var(--icon-action-secondary);
}

.toolbar {
	display: flex;
	align-items: center;
	border-bottom: 1px solid var(--border);
	padding: var(--sm) var(--standard);
	gap: var(--3xs);
}

.body {
	flex: 1;
	overflow: auto;
}

.footer {
	display: flex;
	align-items: center;
	padding: var(--standard);
	border-top: 1px solid var(--border);
}

.actions {
	display: flex;
	align-items: center;
	gap: var(--xs);
	margin-left: auto;
}

